[gd_scene load_steps=4 format=3 uid="uid://cwi3ojmkmngll"]

[ext_resource type="Script" uid="uid://7t870qpbkra0" path="res://scripts/gameplay/pov_switch.gd" id="1_e2evw"]
[ext_resource type="Texture2D" uid="uid://cr76qkljvh0rb" path="res://assets/images/characters/adi/bust.png" id="2_0j368"]
[ext_resource type="Texture2D" uid="uid://con3smvs1dxbs" path="res://assets/images/characters/wiks/bust.png" id="3_0t5ca"]

[node name="POVSwitch" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_left = 416.0
offset_right = -416.0
offset_bottom = 72.0
grow_horizontal = 2
script = ExtResource("1_e2evw")

[node name="AdiButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.0
offset_top = 16.0
offset_right = -5.0
offset_bottom = 72.0
grow_horizontal = 2
texture_normal = ExtResource("2_0j368")
ignore_texture_size = true
stretch_mode = 6

[node name="WiksButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 5.0
offset_top = 16.0
offset_right = 155.0
offset_bottom = 72.0
grow_horizontal = 2
texture_normal = ExtResource("3_0t5ca")
ignore_texture_size = true
stretch_mode = 6

[connection signal="pressed" from="AdiButton" to="." method="_on_adi_button_pressed"]
[connection signal="pressed" from="WiksButton" to="." method="_on_wiks_button_pressed"]
